<resources>
    <string name="app_name">Final application</string>
    <string name="text_welcome">Welcome to BMI Calculator</string>
    <string name="text_instructions">Enter your height in cm and your weight in kg to get your Body Mass Index</string>
    <string name="edit_height">Height in cm</string>
    <string name="edit_weight">Weight in kg</string>
    <string name="get_bmi">Enter</string>
    <string name="returnstr">Return</string>
    <string name="title_activity_update_delete">UpdateDelete</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_descr">BMI Calculator  Graph</string>
    <string name="show_graph">Graph</string>
</resources>