<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >


    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_welcome"
        android:textSize="26sp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="36dp"
        ></TextView>

    <TextView
        android:id="@+id/text_descrp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_descr"
        android:textSize="26sp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="36dp"
        ></TextView>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@drawable/bmichartbmoi"

        ></ImageView>

    <Button
        android:id="@+id/button_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnstr"></Button>


</LinearLayout>
